--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>SWF Runner</title>
+    <h1>Cybercore</h1>
     <script src="Build/UnityLoader.js"></script>
     <style>
     body {
