--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>SWF Runner</title>
-    <h1>Cybercore</h1>
+    <h1>Cybercore presents: Runaway Shootout</h1>
     <script src="Build/UnityLoader.js"></script>
     <style>
     body {
       background-color: #000000;
+        color: #FFFFFF;
     }
     </style>
     <script>
